<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iit.ritik.studentinformation.Branch_Info">

    <EditText
        android:id="@+id/student_name1"
        style="@style/edi_text"
        android:hint="@string/student_name"
        android:visibility="gone"
        android:text=""/>

    <EditText
        android:id="@+id/adm_no"
        style="@style/edi_text"
        android:hint="@string/adm_no"
        android:visibility="gone"
        android:text=""/>

    <EditText
        android:id="@+id/email_id"
        style="@style/edi_text"
        android:hint="@string/emailId"
        android:visibility="gone"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="8dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:id="@+id/ok1"
            android:text="@string/ok"
            android:visibility="gone"
            android:onClick="ok1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:id="@+id/add_table1"
            android:text="@string/add_teble"
            android:onClick="add1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:id="@+id/cancel1"
            android:text="@string/cancel"
            android:visibility="gone"
            android:onClick="cancel1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:background="@drawable/border_nocolor">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_list"></ListView>
    </LinearLayout>
</LinearLayout>
