<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_parentlayout"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iit.ritik.studentinformation.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/table_name"
        style="@style/edi_text"
        android:hint="@string/table_name"
        android:visibility="gone"
        android:text=""/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="8dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:id="@+id/ok"
            android:text="@string/ok"
            android:visibility="gone"
            android:onClick="ok"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:id="@+id/add_table"
            android:text="@string/add_teble"
            android:onClick="add"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:visibility="gone"
            android:onClick="cancel"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:background="@drawable/border_nocolor">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table_list"></ListView>
    </LinearLayout>


</LinearLayout>
